# nonstandard-ml

cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: bytecode.rs  cps.rs  diagnostic.rs  elab.rs  lib.rs  ssa.rs  stringpool.rs  syntax.rs
core/src/bytecode/: convert.rs
core/src/cps/: convert.rs
core/src/elab/: ctx.rs  typ.rs  typed.rs
core/src/ssa/: convert.rs  liveness.rs
core/src/syntax/: ast.rs  lexer.rs  parser.lalrpop
core/tests/: main.rs
core/tests/cps-fail/: int_incomplete.nml
core/tests/pass/: curry1.nml  curry2.nml  decswildcard.nml  generic.nml  intmatch.nml  twodecs.nml
core/tests/syntax-fail/: syn1.nml
core/tests/typing-fail/: typ1.nml
src/: ast.rs  elab.rs  lexer.rs  main.rs  parser.lalrpop  syntax.rs
src/elab/: ctx.rs  typ.rs  typed.rs
src/syntax/: ast.rs  lexer.rs  parser.lalrpop
test/pass/: pass1.nml
