[package]
name = "nonstandard-ml"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bumpalo = { version = "3.9.1", features = ["collections"] }
lalrpop-util = "0.19.8"
lexgen = "0.10.0"
lexgen_util = "0.10.0"

[build-dependencies]
lalrpop = { version = "0.19.8", default-features = false }
